# python.exe

./: README.md  pyproject.toml
.github/workflows/: build-exe.yml  release.yaml
pythonexe/: main.py
