[project]
name = "python-exe"
version = "0.1.0"
description = ""
authors = [
    {name = "akira",email = "asa.shakira340@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyinstaller (>=6.12.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "python"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
