[project]
name = "pythonexe"
version = "0.1.0"
description = ""
authors = [{ name = "akira", email = "asa.shakira340@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
scripts.pythonexe = "pythonexe.main:main"
dependencies = ["pyinstaller (>=6.12.0,<7.0.0)", "pyyaml (>=6.0.2,<7.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
